Bug 105909 - Auto Filter State is Lost When Open the Attached XLSX File
Summary: Auto Filter State is Lost When Open the Attached XLSX File
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: JoNi
URL:
Whiteboard: target:5.4.0
Keywords: bibisected, bisected, filter:xlsx, regression
Depends on:
Blocks:
 
Reported: 2017-02-10 04:31 UTC by Kevin Suo
Modified: 2017-03-18 03:51 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
test xlsx file (15.45 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2017-02-10 04:31 UTC, Kevin Suo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2017-02-10 04:31:18 UTC
Created attachment 131063 [details]
test xlsx file

The Auto Filter state is lost when open the attached XLSX file with LibreOffice.

Steps to Reproduce:
1. Open the attached XLSX file with libreoffice master.
--> You do not see the auto filter state on the UI. 

Ubuntu 16.04 LTS x64
Version: 5.4.0.0.alpha0+
Build ID: 54d5b1828ec73d0475e0ddb6e31394a7e1904a1b
CPU Threads: 4; OS Version: Linux 4.4; UI Render: default; VCL: gtk2; 
Locale: zh-CN (zh_CN.UTF-8); Calc: group
Comment 1 Kevin Suo 2017-02-10 04:34:51 UTC
lo-linux-dbgutil-daily
 b1b8322ca653664650ab3294a6650e245f1b16f5 is the first bad commit
commit b1b8322ca653664650ab3294a6650e245f1b16f5
Author: Miklos Vajna <vmiklos@collabora.co.uk>
Date:   Tue Jan 3 05:58:04 2017 +0100

    2017-01-03: source-hash-19eb2bfa2d56fbe97fe187b3320cf884d848119c

:100644 100644 048cd7c5b772fa0eb08ac5d6e46f6ee8792a1e33 789a744574a88c781ce118abc1b7db06efebc659 M	build-info.txt
:040000 040000 1aab3cd1310daabc19a56d88e69c98153bb95c2c 0a73279c356d38e37b1f550bf7956a0b1416a4be M	opt


git bisect log

# bad: [ad8532ebf008b2d2177784e851b5b94f31299fd4] 2017-01-17: source-hash-294f2e627cc6f1d0483f7affcf96467a4bd3ba5a
# good: [35574763296c875a3a52ad1e2fd7dd3f9057ede8] 2016-11-23: source-hash-c0d4aadf08c16f2d79508367c631366f7a856346
git bisect start 'ad8532ebf008b2d2177784e851b5b94f31299fd4' '35574763296c875a3a52ad1e2fd7dd3f9057ede8'
# good: [05a98ad3aa9d92936946beaa0850ccea1627a9c3] 2016-12-20: source-hash-2e9c02feca732f6dd012ccbe5d7c6853c64075a5
git bisect good 05a98ad3aa9d92936946beaa0850ccea1627a9c3
# bad: [b1b8322ca653664650ab3294a6650e245f1b16f5] 2017-01-03: source-hash-19eb2bfa2d56fbe97fe187b3320cf884d848119c
git bisect bad b1b8322ca653664650ab3294a6650e245f1b16f5
# good: [7c3af42cc923b5d54fe399ca35cda6df47ae5aa3] 2016-12-27: source-hash-702c8c59a5d5dfe839a44da511971470354e2a41
git bisect good 7c3af42cc923b5d54fe399ca35cda6df47ae5aa3
# good: [827b2999dafeafbf780f7f24742b6a53bfa12837] 2016-12-30: source-hash-a7c51323b7343f82b5aea6098f5d5e31a8bad0e9
git bisect good 827b2999dafeafbf780f7f24742b6a53bfa12837
# good: [ddf2b9939e09c36a514378d28d2a4efb15e53e07] 2017-01-01: source-hash-879bac84cde2fc7cc27363d1bb0ca50c53162a88
git bisect good ddf2b9939e09c36a514378d28d2a4efb15e53e07
# good: [5adfa332261f4ce8489b30b6f9141f4c0be28a5a] 2017-01-02: source-hash-1b7e788eb3bf9cbe56ed5cc4a3fa7fa5e70ac40a
git bisect good 5adfa332261f4ce8489b30b6f9141f4c0be28a5a


Commit range:
https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=1b7e788eb3bf9cbe56ed5cc4a3fa7fa5e70ac40a..19eb2bfa2d56fbe97fe187b3320cf884d848119c
Comment 2 Xisco Faulí 2017-02-10 11:50:38 UTC
Data - Autofilter?
Comment 3 Kevin Suo 2017-02-10 14:12:51 UTC
The data in this spreadsheet has auto filter set, you should see the auto filter drop down in each cell of the first row, but the auto filter dropdowns do not show up in the most recent master.
Comment 4 Xisco Faulí 2017-02-10 14:32:45 UTC
Confirmed that the autoFilter is not displated by default in

Version: 5.4.0.0.alpha0+
Build ID: a25b1ff25a3be97d688d66b12353b4217fd239a5
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but it's in

Version: 5.4.0.0.alpha0+
Build ID: ae604ccce58f414fb2a0446bb4f94553929c72e4
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86@71-TDF, Branch:master, Time: 2017-01-02_23:32:56
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 5 Xisco Faulí 2017-02-14 13:54:50 UTC
Regression introduced by:

author	Jochen Nitschke <j.nitschke+logerrit@ok.de>	2017-01-01 13:36:03 (GMT)
committer	Jochen Nitschke <j.nitschke+logerrit@ok.de>	2017-01-03 00:19:55 (GMT)
commit a1a44eb3b305f1aad77b0cc1532c98016482f620 (patch)
tree ec12c74f4dba86e98655ed6b5c2ca32a58c3e0ad
parent 99577bfa80cb926ff9a1710905036e2d09747ddb (diff)
tdf#48140 replace CellRangeAddress in xlsx import (9)

Adding Cc: to Jochen Nitschke
Comment 6 Xisco Faulí 2017-02-14 14:15:27 UTC
@Jochen Nitschke: would you mind taking a look at it whenever you have some time?
Regards
Comment 7 Commit Notification 2017-02-15 16:51:43 UTC
Jochen Nitschke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=deff2acd61de53e29a8cf1eed7f8db458244dab0

tdf#105909 auto filter state lost on xlsx import

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 JoNi 2017-02-15 17:08:36 UTC
thanks for reporting and bisecting.
with this patch auto filter state should be shown again, please verify.

the bug in the code could have caused other problems with formula ranges too.
Comment 9 Kevin Suo 2017-02-16 10:11:40 UTC
I confirm this bug is fixed in master:
Version: 5.4.0.0.alpha0+
Build ID: a6c4552e792f6ab20fae83d354b369defd3bb345
CPU Threads: 4; OS Version: Linux 4.4; UI Render: default; VCL: gtk2; 
Locale: zh-CN (zh_CN.UTF-8); Calc: group
Comment 10 Commit Notification 2017-03-18 03:51:38 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=21cc5084d5fdcedec7793dbf024552592a70324d

add test for tdf#105909

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.