tdf#105909 auto filter state lost on xlsx import

in commit 77dc03c29501234bb07170004a7b8204987bad0c
the new variant of FormulaProcessorBase::extractCellRange(..)
replaced a CellRangeAddress& ApiCellRangeList::front() with
ScAddress& ApiCellRangeList::getBaseAddress() which returned only
the start address of the front range. This went unnoticed because
ScRange has a non explicit constructor from ScAddress.

later ApiCellRangeList::getBaseAddress() got replaced
by ScRangeList::GetTopLeftCorner().

use ScRangeList::front() to fix this regression.

Change-Id: I338e5d3054b62d5dd191492a38451d0adc85ae0d